force-app/main/default/objects/Scorecard_Question_History__c/Scorecard_Question_History__c.object-meta.xml
<CustomObject>
    <label>Scorecard Question History</label>
    <nameField>
        <displayFormat>SQH-{0000000}</displayFormat>
        <label>Scorecard Question History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scorecard Question History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>