force-app/main/default/objects/Scorecard_Question_History__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Scorecard Question History</relationshipLabel>
    <relationshipName>Scorecard_Question_History</relationshipName>
    <type>Lookup</type>
</CustomField>