force-app/main/default/objects/Scorecard_Question_History__c/fields/Point_Value__c.field-meta.xml
<CustomField>
    <fullName>Point_Value__c</fullName>
    <label>Point Value</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>