force-app/main/default/objects/Scorecard_Question_History__c/fields/Question_Name__c.field-meta.xml
<CustomField>
    <fullName>Question_Name__c</fullName>
    <formula>Scorecard_Answer__r.Scorecard_Question__r.Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Question Name</label>
    <type>Text</type>
</CustomField>