force-app/main/default/objects/Scorecard_Question_History__c/fields/Response_Value__c.field-meta.xml
<CustomField>
    <fullName>Response_Value__c</fullName>
    <label>Response Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>