force-app/main/default/objects/Scorecard_Question_History__c/fields/Scorecard_Answer__c.field-meta.xml
<CustomField>
    <fullName>Scorecard_Answer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scorecard Answer</label>
    <referenceTo>Scorecard_Answer__c</referenceTo>
    <relationshipLabel>Scorecard Question History</relationshipLabel>
    <relationshipName>Scorecard_Question_History</relationshipName>
    <type>Lookup</type>
</CustomField>