force-app/main/default/objects/Scorecard_Question_History__c/fields/Scorecard_Question__c.field-meta.xml
<CustomField>
    <fullName>Scorecard_Question__c</fullName>
    <label>Scorecard Question</label>
    <length>255</length>
    <type>Text</type>
</CustomField>